# ChangeLog for www-servers/cherokee
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.77 2010/11/18 10:30:59 bass Exp $

*cherokee-1.0.9 (18 Nov 2010)

  18 Nov 2010; J. Alberto Suárez López <bass@gentoo.org>
  -cherokee-1.0.7.ebuild, +cherokee-1.0.9.ebuild:
  bump version

  18 Oct 2010; J. Alberto Suárez López <bass@gentoo.org>
  cherokee-1.0.8.ebuild:
  temp fix for parallel install problem #341225

*cherokee-1.0.8 (12 Aug 2010)

  12 Aug 2010; J. Alberto Suárez López <bass@gentoo.org>
  -cherokee-1.0.5.ebuild, -cherokee-1.0.6.ebuild, +cherokee-1.0.8.ebuild:
  verssion bump

*cherokee-1.0.7 (10 Aug 2010)

  10 Aug 2010; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-1.0.7.ebuild:
  bump version

*cherokee-1.0.6 (05 Aug 2010)

  05 Aug 2010; J. Alberto Suárez López <bass@gentoo.org>
  -cherokee-1.0.2-r1.ebuild, -cherokee-1.0.4.ebuild, +cherokee-1.0.6.ebuild:
  version bump

*cherokee-1.0.5 (07 Jul 2010)

  07 Jul 2010; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-1.0.5.ebuild:
  version bump

  06 Jul 2010; J. Alberto Suárez López <bass@gentoo.org>
  cherokee-1.0.4.ebuild:
  Fixed #325353 waiting for upstream to support to disable rrd

  01 Jul 2010; J. Alberto Suárez López <bass@gentoo.org>
  cherokee-1.0.4.ebuild:
  Fixed QA bug #325617

*cherokee-1.0.4 (23 Jun 2010)

  23 Jun 2010; J. Alberto Suárez López <bass@gentoo.org>
  -cherokee-0.99.30.ebuild, -cherokee-0.99.42.ebuild,
  -cherokee-0.99.44.ebuild, -cherokee-0.99.48.ebuild,
  -cherokee-1.0.0.ebuild, +cherokee-1.0.4.ebuild:
  version bump. remove old ebuilds

*cherokee-1.0.2-r1 (16 Jun 2010)

  16 Jun 2010; J. Alberto Suárez López <bass@gentoo.org>
  -cherokee-1.0.2.ebuild, +cherokee-1.0.2-r1.ebuild:
  Fixed python compatibility (thanks xmw)

*cherokee-1.0.2 (16 Jun 2010)

  16 Jun 2010; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-1.0.2.ebuild: