@@ -1,7 +1,9 @@
 AUX cherokee-initd-0.99.23 542 RMD160 e0ee20b7bb781797c3a53d0e2804e8b0fe985beb SHA1 4a8b43509aa4b9bf1079e0e74ca9d61428672522 SHA256 9e58ed7b3050a17fed08cc682e30dfa14e09eb804084b6cc9b213ccd0843300f
+DIST cherokee-1.0.10.tar.gz 5689814 RMD160 ebe6f025fe7f9d345de0543ca34cd7023dd1d1e1 SHA1 5a316c79c31f49744879863a18611af3fb7d3137 SHA256 688b8112506c2692cd0547dc9f4dc0837aa1a4b38d077ec3dacef3acacbe474d
 DIST cherokee-1.0.8.tar.gz 5384416 RMD160 b72b8d11781666ea50a6f01be2f25e5a2233bc30 SHA1 28b2e2b192c713aa9c43737ae8376a55effa7336 SHA256 45e0f777668f7e1ea13c706bdd7b6519077854a69223ad5d3b2fa30bdc83cf1f
 DIST cherokee-1.0.9.tar.gz 5784929 RMD160 ce6502fe2847c0b3a254368e836efcb761b29460 SHA1 fd04b5eb0b6cdc1074e52690bb36f2a1a34d33dc SHA256 ab637e411717a57545f374e0c44b1e1ecb421e0a57a70f5fb456029631c4db46
+EBUILD cherokee-1.0.10.ebuild 4156 RMD160 21beb914a6ddef61e38cbfe377f450d75fb23eac SHA1 926402f376acf82f7182ee9cff55e7e668785b8f SHA256 427deffcafe60cc855ef7bdf0170eafbd76635774fcd62a108321a8e5da30857
 EBUILD cherokee-1.0.8.ebuild 4155 RMD160 03c58149bf5c416171a55020ab637466eee78f6f SHA1 424af6f0a481b732de1c60ddbd4de52030fb35c7 SHA256 005816652bd8f70ba73fa4a259a68e029fc32e7d4e876631d9aa11bfaa341024
 EBUILD cherokee-1.0.9.ebuild 4155 RMD160 0599855ec44c4ddfaedfa15bb87955dad9ba9c5d SHA1 502a413d7c0d04d6a4f96353679633990f2b4ef5 SHA256 7d2beefa7032184d44a0d61ba3d0e010f6f2bda4740c36e4723fb34625243d80
-MISC ChangeLog 18665 RMD160 1603994bc70acf290adcc9abc7cdedcba45b3c77 SHA1 20ca52f8984b1fd58ace558adefc3456297fa294 SHA256 4b0dc8b47a318781ee1e186345ba1c1a3388921fafb52075bdc0dbd48f54ec18
+MISC ChangeLog 18799 RMD160 2ffe330f43881b40b932b358581a12ac6307d96b SHA1 2d313eda498d8db0874e762d77bb88beb43aa2dc SHA256 91d956227c2295f1ae24f8e0ba2841a2b3a1dfa158d4b0eb2adddd34309cebfc
 MISC metadata.xml 488 RMD160 6689708f9508ed17b4f67284e8fef3512161b432 SHA1 c7a8168a8e6b119bee60b536552f378cf670130b SHA256 4ee7f5937c157209c4d78429188bcfc36b9c063252760215ce2e70da1ff95496
