@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/cherokee
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.77 2010/11/18 10:30:59 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.78 2010/11/25 12:56:01 bass Exp $
+
+*cherokee-1.0.10 (25 Nov 2010)
+
+  25 Nov 2010; J. Alberto Suárez López <bass@gentoo.org>
+  +cherokee-1.0.10.ebuild:
+  version bump
 
 *cherokee-1.0.9 (18 Nov 2010)
 
